character-creator: fix for .visually-hidden causing scrollbars

--- a/02 character-creator/src/components/ButtonRow/ButtonRow.module.css
+++ b/02 character-creator/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,5 @@
 .buttonRow {
   overflow-x: auto;
   white-space: nowrap;
+  position: relative;
 }
