--- a/02 character-creator/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/02 character-creator/src/components/CharacterEditor/CharacterEditor.module.css
@@ -48,10 +48,7 @@
 }
 
 @media (max-width: 760px) {
-  .characterEditor {
-    overflow: hidden;
-  }
-
+  
   .header {
     width: 100%;
   }
